<resources>
    <string name="app_name">Flash Cards</string>
    <string name="load_cards">Load Flash Cards</string>
    <string name="load_settings">Settings</string>
    <string name="theme_switch">Toggle Theme</string>

    <!-- Card Display Strings -->
    <string name="generate_cta">Generate</string>
    <string name="generate_prompt_text">Click Generate To Start</string>
    <string name="unit_one_text">Unit 1</string>
    <string name="unit_two_text">Unit 2</string>
    <string name="unit_three_text">Unit 3</string>
    <string name="unit_four_text">Unit 4</string>
    <string name="unit_five_text">Unit 5</string>
    <string name="unit_six_text">Unit 6</string>
    <string name="unit_seven_text">Unit 7</string>
    <string name="unit_eight_text">Unit 8</string>

</resources>
