<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/unit_one_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_one_text"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/unit_two_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_two_text"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/unit_three_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_three_text"
            android:textSize="20sp"/>


        <CheckBox
            android:id="@+id/unit_four_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_four_text"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/unit_five_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_five_text"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/unit_six_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_six_text"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/unit_seven_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_seven_text"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="Start"/>
</RelativeLayout>